--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
                 tools: "ANSYS, CATIA, Python",
                 description: "Comprehensive structural analysis of a commercial aircraft wing under various load conditions. Performed FEA simulations to optimize weight while maintaining structural integrity and safety margins.",
                 pdf: "wing-analysis.pdf", 
-                image: "tp1i.png" 
+                image: "images/tp1i.png" 
             },
             { 
                 name: "Fluid Dynamics Lab - Wind Tunnel Testing", 
@@ -1343,4 +1343,5 @@
     </script>
 </body>
 </html>
+
 
