--- a/index.html
+++ b/index.html
@@ -332,7 +332,10 @@
         .project-image {
             width: 200px;
             height: 150px;
-            background: #000;
+            background-image: url('images/bloc_tp.jpg'); /* chemin relatif depuis le CSS */
+            background-size: cover; /* l’image remplit le bloc */
+            background-position: center; /* centrée */
+            border-radius: 8px; /* optionnel, pour arrondir les coins */
             z-index: 2;
             position: relative;
             flex-shrink: 0;
@@ -1343,5 +1346,6 @@
     </script>
 </body>
 </html>
+
 
 
