--- a/index.html
+++ b/index.html
@@ -344,7 +344,23 @@
             transition: all 0.4s ease;
             overflow: hidden;
         }
-
+        
+        .project-image2 {
+            width: 200px;
+            height: 150px;
+            background-image: url('images/bloc_projets.jpg'); /* chemin relatif depuis le CSS */
+            background-size: cover; /* l’image remplit le bloc */
+            background-position: center; /* centrée */
+            border-radius: 8px; /* optionnel, pour arrondir les coins */
+            z-index: 2;
+            position: relative;
+            flex-shrink: 0;
+            border-radius: 8px;
+            margin: 20px;
+            transition: all 0.4s ease;
+            overflow: hidden;
+        }
+        
         .project-block:hover .project-image {
             transform: scale(1.05);
             filter: brightness(1.1);
@@ -1346,6 +1362,7 @@
     </script>
 </body>
 </html>
+
 
 
 
