--- a/index.html
+++ b/index.html
@@ -903,21 +903,18 @@
                     <div class="section-title">Career Timeline</div>
                     <div class="timeline">
                         <div class="timeline-item">
-                            <div class="timeline-year">2024</div>
-                            <div class="timeline-content">Lead Engineer - Regional Aircraft Development</div>
+                            <div class="timeline-year">Sept. 2025 - Feb. 2026</div>
+                            <div class="timeline-content">Mechanichal Engineering (aeronautical) - University of Technology Malaysia</div>
                         </div>
                         <div class="timeline-item">
-                            <div class="timeline-year">2023</div>
-                            <div class="timeline-content">Aerospace Engineering Internship</div>
+                            <div class="timeline-year">2022 - 2027</div>
+                            <div class="timeline-content">Aeornautical & Aerospace Engineering - Institut Polytechnique des Sciences Avancées (IPSA)</div>
                         </div>
                         <div class="timeline-item">
-                            <div class="timeline-year">2022</div>
-                            <div class="timeline-content">Master's - Aerospace Engineering</div>
+                            <div class="timeline-year">2019 - 2022</div>
+                            <div class="timeline-content">Scientific Baccalaureate - Guillaume Apollinaire High School</div>
                         </div>
-                        <div class="timeline-item">
-                            <div class="timeline-year">2020</div>
-                            <div class="timeline-content">Bachelor's - Mechanical Engineering</div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -1028,7 +1025,7 @@
         </div>
     </div>
 
-    <!-- Modal for Projects -->
+    <!-- Modal for Projets -->
     <div id="projectsModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -1067,24 +1064,24 @@
         const tpData = [
             { 
                 name: "Structural Analysis of Aircraft Wing", 
-                year: "2024", 
+                year: "4th year", 
                 tools: "ANSYS, CATIA, Python",
                 description: "Comprehensive structural analysis of a commercial aircraft wing under various load conditions. Performed FEA simulations to optimize weight while maintaining structural integrity and safety margins.",
-                pdf: "wing-analysis.pdf", 
-                image: "images/tp1i.png" 
+                pdf: "projets/UAV_Report_2_FDAC.pdf", 
+                image: "images/uav.png" 
             },
             
         ];
 
-        // Data structure for Projects
+        // Data structure for Projects UPLOAD
         const projectsData = [
             { 
-                name: "Design Bureau: Regional Aircraft Development", 
-                year: "2024", 
-                tools: "CATIA V5, ANSYS, TeamCenter",
-                description: "Led a team of 5 engineers in developing preliminary design concepts for a 70-seat regional aircraft. Focused on aerodynamic efficiency and operational economics.",
-                pdf: "regional-aircraft.pdf", 
-                image: "" 
+                name: "UAV Stability Derivatives Analysis", 
+                year: "4th year", 
+                tools: "XFLR5, CATIA V5, OpenVSP, Matlab",
+                description: "This report presents the aerodynamic and stability derivative analysis of a RC UAV based on the provided geometry and airfoil data. Several methods were tested, including CAD-to-ANSYS simulation, OpenVSP, and XFLR5. After multiple unsuccessful attempts with full 3D simulation, the analysis was successfully completed by isolating wing and tail components in XFLR5, extracting the aerodynamic data, and processing the stability derivatives analytically and through MATLAB dynamic modeling.",
+                pdf: "projets/UAV_Report_2_FDAC.pdf", 
+                image: "images/uav.png" 
             },
             
         ];
@@ -1292,6 +1289,7 @@
     </script>
 </body>
 </html>
+
 
 
 
