--- a/index.html
+++ b/index.html
@@ -1001,10 +1001,10 @@
                 Interested in collaboration or have questions about my work? Feel free to reach out through any of the channels below.
             </p>
             <div class="contact-buttons">
-                <a href="mailto:john@aerospace.com" class="contact-btn">
+                <a href="mailto:rayan.chennaoui@ipsa.fr" class="contact-btn">
                     <span>📧</span> Email
                 </a>
-                <a href="https://linkedin.com" target="_blank" class="contact-btn">
+                <a href="https://www.linkedin.com/in/rayan-chennaoui-4b7608156/" target="_blank" class="contact-btn">
                     <span>💼</span> LinkedIn
                 </a>
             </div>
@@ -1289,6 +1289,7 @@
     </script>
 </body>
 </html>
+
 
 
 
