--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
         <section class="contact-section fade-in delay-4">
             <h2 style="margin-bottom: 20px; font-size: 32px;">Get In Touch</h2>
             <p style="color: #666; max-width: 600px; margin: 0 auto;">
-                Interested in collaboration or have questions about my work? Feel free to reach out through any of the channels below.
+                Please feel free to contact me through any of the channels below.
             </p>
             <div class="contact-buttons">
                 <a href="mailto:rayan.chennaoui@ipsa.fr" class="contact-btn">
@@ -1289,6 +1289,7 @@
     </script>
 </body>
 </html>
+
 
 
 
