--- a/index.html
+++ b/index.html
@@ -1063,12 +1063,12 @@
         // Data structure for TPs
         const tpData = [
             { 
-                name: "Structural Analysis of Aircraft Wing", 
-                year: "4th year", 
-                tools: "ANSYS, CATIA, Python",
-                description: "Comprehensive structural analysis of a commercial aircraft wing under various load conditions. Performed FEA simulations to optimize weight while maintaining structural integrity and safety margins.",
-                pdf: "projets/UAV_Report_2_FDAC.pdf", 
-                image: "images/uav.png" 
+                name: "(FR) NACA 0012 CFD Analysis", 
+                year: "3rd year", 
+                tools: "StarCCM+",
+                description: "The objective of this practical assignment is to study the aerodynamic behavior of a NACA0012 profile using STAR CCM+ simulation software. By varying the angle of incidence, we seek to analyze the evolution of the lift coefficient and determine the stall angle. This study provides a better understanding of the relationship between the airflow around the profile and the forces generated.",
+                pdf: "projets/3VEa_20250512_CHENNAOUI_Rayan_NACA.pdf", 
+                image: "images/cfd1.png" 
             },
             
         ];
@@ -1076,7 +1076,7 @@
         // Data structure for Projects UPLOAD
         const projectsData = [
             { 
-                name: "UAV Stability Derivatives Analysis", 
+                name: "(ENG) UAV Stability Derivatives Analysis", 
                 year: "4th year", 
                 tools: "XFLR5, CATIA V5, OpenVSP, Matlab",
                 description: "This report presents the aerodynamic and stability derivative analysis of a RC UAV based on the provided geometry and airfoil data. Several methods were tested, including CAD-to-ANSYS simulation, OpenVSP, and XFLR5. After multiple unsuccessful attempts with full 3D simulation, the analysis was successfully completed by isolating wing and tail components in XFLR5, extracting the aerodynamic data, and processing the stability derivatives analytically and through MATLAB dynamic modeling.",
@@ -1289,6 +1289,7 @@
     </script>
 </body>
 </html>
+
 
 
 
