--- a/index.html
+++ b/index.html
@@ -1083,6 +1083,14 @@
                 pdf: "projets/UAV_Report_2_FDAC.pdf", 
                 image: "images/uav.png" 
             },
+            { 
+                name: "(FR) Applied Data Science Project: Statistical Analysis", 
+                year: "3rd year", 
+                tools: "Python",
+                description: "This project applies univariate, bivariate, and multivariate statistical methods to real-world datasets to extract meaningful insights. It covers topics such as regression, correlation analysis, confidence intervals, and statistical modeling, with applications ranging from agricultural data to aircraft performance analysis.",
+                pdf: "projets/PROJET___SCIENCE_DES_DONNEES (3) (1).pdf", 
+                image: "images/uav.png" 
+            },
             
         ];
 
@@ -1289,6 +1297,7 @@
     </script>
 </body>
 </html>
+
 
 
 
