--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,15 @@
                 tools: "Python",
                 description: "This project applies univariate, bivariate, and multivariate statistical methods to real-world datasets to extract meaningful insights. It covers topics such as regression, correlation analysis, confidence intervals, and statistical modeling, with applications ranging from agricultural data to aircraft performance analysis.",
                 pdf: "projets/PROJET___SCIENCE_DES_DONNEES (3) (1).pdf", 
-                image: "images/uav.png" 
+                image: "images/sdd.png" 
+            },
+            { 
+                name: "CAO: CATIA Design of a Complete Aircraft Rudder Pedal Assembly", 
+                year: "2nd year", 
+                tools: "Catia V5",
+                description: "This project involved the complete mechanical design of an aircraft rudder pedal (palonnier) using CATIA, from individual parts to the full assembly. The work focused on kinematic coherence, structural integrity, and realistic integration of mechanical constraints typical of aeronautical systems.",
+                pdf: "projets/PF_RAYAN.pdf", 
+                image: "images/cao.png" 
             },
             
         ];
@@ -1297,6 +1305,7 @@
     </script>
 </body>
 </html>
+
 
 
 
