--- a/index.html
+++ b/index.html
@@ -1099,6 +1099,14 @@
                 pdf: "projets/PF_RAYAN.pdf", 
                 image: "images/cao.png" 
             },
+            { 
+                name: "(FR) CAO: CATIA Design of a Mirage 2000 wing", 
+                year: "3rd year", 
+                tools: "Catia V5",
+                description: "This project focused on the complete design of a Mirage 2000 wing in CATIA, including functional elevons, leading-edge slats, and an airbrake system. Emphasis was placed on realistic kinematics, aerodynamic coherence, and accurate integration of control surfaces within a delta-wing configuration.",
+                pdf: "projets/MIRAGE 2000 (1).pdf", 
+                image: "images/cao2.png" 
+            },
             
         ];
 
@@ -1305,6 +1313,7 @@
     </script>
 </body>
 </html>
+
 
 
 
