--- a/index.html
+++ b/index.html
@@ -1107,6 +1107,14 @@
                 pdf: "projets/MIRAGE 2000 (1).pdf", 
                 image: "images/cao2.png" 
             },
+            { 
+                name: "(FR) GoPiGo Robot for Area Measurement (0,1% uncertainty)", 
+                year: "2nd year", 
+                tools: "Python, GoPiGo",
+                description: "This project involved the design and programming of a GoPiGo autonomous robot to estimate surface areas through controlled motion and sensor data acquisition. A full uncertainty analysis was conducted, achieving a measurement precision of up to 0.1%. The work combined robotics, data processing, and error propagation to ensure reliable and repeatable results. The robot was programmed within an isolated embedded Linux environment, accessed remotely via SSH, allowing direct Python development and execution on the GoPiGo platform.",
+                pdf: "projets/GRAND PROJET - GOPIGO.pdf", 
+                image: "images/gpg.png" 
+            },
             
         ];
 
@@ -1313,6 +1321,7 @@
     </script>
 </body>
 </html>
+
 
 
 
