--- a/index.html
+++ b/index.html
@@ -1115,6 +1115,14 @@
                 pdf: "projets/GRAND PROJET - GOPIGO.pdf", 
                 image: "images/gpg.png" 
             },
+            { 
+                name: "(FR) Thermodynamic Analysis of Vapor Compression Refrigeration Systems", 
+                year: "3rd year", 
+                tools: "SOLKANE Software 8.0",
+                description: "This project involved the detailed thermodynamic study of several vapor compression refrigeration cycles, including single-stage, heat exchanger-assisted, and two-stage configurations. The performance of each system was analyzed through analytical calculations and graphical representations (Mollier and T–s diagrams), and validated using Solkane simulation software. The study highlighted the impact of system architecture on energy efficiency, coefficient of performance (COP), and overall thermal behavior.",
+                pdf: "projets/BE2_CHENNAOUI_KASHANI_Aero3PVE.pdf", 
+                image: "images/solk.png" 
+            },
             
         ];
 
@@ -1321,6 +1329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
