--- a/index.html
+++ b/index.html
@@ -1123,6 +1123,14 @@
                 pdf: "projets/BE2_CHENNAOUI_KASHANI_Aero3PVE.pdf", 
                 image: "images/solk.png" 
             },
+            { 
+                name: "(FR) Modeling and Control of an Elevator Actuation System (A380)", 
+                year: "2nd year", 
+                tools: "Matlab",
+                description: "This project focused on the modeling, simulation, and optimization of a hydraulic actuator controlling the elevator of the Airbus A380. The system was implemented in MATLAB Simulink using block-diagram representations derived from Laplace-domain modeling, first without and then with aerodynamic effects. Control parameters were tuned to meet stability, precision, and performance requirements, providing a realistic representation of an industrial flight control system.",
+                pdf: "projets/2pc2_projet1_BEAUCLAIR_CHENNAOUI.pdf", 
+                image: "images/m.png" 
+            },
             
         ];
 
@@ -1329,6 +1337,7 @@
     </script>
 </body>
 </html>
+
 
 
 
