--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         .project-image {
             width: 200px;
             height: 150px;
-            background-image: url('images/bloc_tp.jpg'); /* chemin relatif depuis le CSS */
+            background-image: url('images/pj.jpg'); /* chemin relatif depuis le CSS */
             background-size: cover; /* l’image remplit le bloc */
             background-position: center; /* centrée */
             border-radius: 8px; /* optionnel, pour arrondir les coins */
@@ -1337,6 +1337,7 @@
     </script>
 </body>
 </html>
+
 
 
 
