--- a/index.html
+++ b/index.html
@@ -1131,6 +1131,14 @@
                 pdf: "projets/2pc2_projet1_BEAUCLAIR_CHENNAOUI.pdf", 
                 image: "images/m.png" 
             },
+            { 
+                name: "(FR) Innovative Railway Noise Reduction Project", 
+                year: "2nd year", 
+                tools: "Office, Python, Catia V5, Noisetools",
+                description: "In this project, we developed advanced noise barriers combining active noise cancellation and high-performance materials to reduce railway sound pollution. The project focuses on improving residents’ quality of life in densely populated areas near train tracks.",
+                pdf: "projets/PIG-Barriere_innovante_contre_les_nuisances_sonores_ferroviaires.pdf", 
+                image: "images/pig.png" 
+            },
             
         ];
 
@@ -1337,6 +1345,7 @@
     </script>
 </body>
 </html>
+
 
 
 
