--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         .project-image2 {
             width: 200px;
             height: 150px;
-            background-image: url('images/bloc_projets.jpg'); /* chemin relatif depuis le CSS */
+            background-image: url('images/bloc_tp.jpg'); /* chemin relatif depuis le CSS */
             background-size: cover; /* l’image remplit le bloc */
             background-position: center; /* centrée */
             border-radius: 8px; /* optionnel, pour arrondir les coins */
@@ -1345,6 +1345,7 @@
     </script>
 </body>
 </html>
+
 
 
 
