--- a/index.html
+++ b/index.html
@@ -1283,17 +1283,12 @@
         // Data for Work in Progress
         const wipData = [
             {
-                name: "Advanced CFD Simulation of a Hypersonic Vehicle",
-                description: "Developing a detailed CFD model to analyze aerodynamic heating and shockwave interactions on a conceptual hypersonic vehicle. The goal is to optimize the thermal protection system.",
-                progress: 65, // Percentage
-                image: "images/wip_hypersonic.jpg"
+                name: "UAV Stability Derivatives Analysis",
+                description: "Stability derivative analysis of a RC UAV based on the provided geometry and airfoil data. Several methods are being tested, including CAD-to-ANSYS simulation, OpenVSP, and XFLR5. After multiple unsuccessful attempts with full 3D simulation, the analysis was successfully completed by using XFLR5, extracting the aerodynamic data, and processing the stability derivatives analytically and through MATLAB dynamic modeling.",
+                progress: 60, // Percentage
+                image: "images/uavwip.png"
             },
-            {
-                name: "Autonomous Drone Navigation with Computer Vision",
-                description: "Implementing a Python-based system using OpenCV for real-time object detection and path planning for an autonomous drone. Currently in the algorithm development phase.",
-                progress: 40,
-                image: "images/wip_drone.jpg"
-            }
+        
         ];
         // Data structure for Projects UPLOAD
         const projectsData = [
@@ -1677,3 +1672,4 @@
     </script>
 </body>
 </html>
+
