--- a/index.html
+++ b/index.html
@@ -1418,10 +1418,10 @@
         const personalProjectsData = [
             {
                 name: "President of BeHard eSport",
-                description: "As president of the BeHard eSport association at IPSA, I led a team of 20 members, managed a budget, and organized multiple gaming tournaments and events for the student community. This role developed my leadership, project management, and communication skills.",
-                images: ["images/behard_esport.jpg", "images/pig.png"], // Example with 2 images
-                pdf: "projets/behard_report.pdf", // Placeholder PDF
-                skills: ["Leadership", "Project Management", "Budgeting", "Event Organization", "Teamwork"]
+                description: "As president of the BeHard eSport association, I led a team of more than 40 members, managed a budget, and organized multiple gaming tournaments and events for the student community. This role developed my leadership, project management, and communication skills.",
+                images: ["images/jersey.png", "images/collection.png"], // Example with 2 images
+                pdf: "projets/doss_mark.pdf", // Placeholder PDF
+                skills: ["Leadership", "Project Management", "Budgeting", "Event Organization", "Teamwork", "Communication"]
             },
         ];
 
@@ -1774,3 +1774,4 @@
     </script>
 </body>
 </html>
+
