--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@
                     
                     <div class="future-project-card">
                         <h3>Computational Mechanics & FEA</h3>
-                        <p>Mastering industry-standard tools (Ansys, Patran/Nastran, Solidworks) to enhance proficiency in Finite Element Method (FEM), complex modeling, and structural data processing.</p>
+                        <p>Mastering industry-standard tools (Ansys, Patran/Nastran, Solidworks, Abaqus...) to enhance proficiency in Finite Element Method (FEM), complex modeling, and structural data processing.</p>
                     </div>
             
                     <div class="future-project-card">
@@ -1241,10 +1241,6 @@
                         <p>Exploring the synergy between algorithms and mechanics. Researching topology optimization to create lightweight, high-performance aerospace structures that defy traditional manufacturing constraints.</p>
                     </div>
 
-                    <div class="future-project-card">
-                        <h3>Advanced Propulsion Systems</h3>
-                        <p>Studying electric and hybrid-electric propulsion systems, including battery technology, power management, and motor design for next-generation aircraft.</p>
-                    </div>
                     <div class="future-project-card">
                         <h3>Materials Science & Composites</h3>
                         <p>Deep dive into advanced composite materials, their manufacturing processes (e.g., AFP), and non-destructive testing (NDT) methods for aerospace applications.</p>
@@ -1780,5 +1776,6 @@
     </script>
 </body>
 </html>
+
 
 
