--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@
                 skills: ["Leadership", "Project Management", "Budgeting", "Event Organization", "Teamwork", "Communication"]
             },
             {
-                name: "Mental Health Mobile App & Landing Website",
+                name: "Mental Health App & Landing Website",
                 description: "Design and development of a well-being mobile application focused on mood and habit tracking, alongside the creation of a responsive landing website to present the product and collect early user feedback. The project covers the full process from UX thinking and visual identity to front-end development, beta testing setup, and user feedback analysis.",
                 images: ["images/app.png", "images/app2.png"], // Example with 2 images // Placeholder PDF
                 skills: ["UX/UI design", "Teamwork","Communication",  "Feedback collection & analysis", "Translate needs into concrete features"]
@@ -1776,6 +1776,7 @@
     </script>
 </body>
 </html>
+
 
 
 
