--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,7 @@
                 <span class="close" onclick="closeModal('cv')">&times;</span>
             </div>
             <div class="modal-body">
-                <iframe class="cv-viewer" src="your-cv.pdf"></iframe>
+                <iframe class="cv-viewer" src="CV_COMPLET_2026_RAYAN_CHENNAOUI.pdf"></iframe>
             </div>
         </div>
     </div>
@@ -1776,6 +1776,7 @@
     </script>
 </body>
 </html>
+
 
 
 
