--- a/index.html
+++ b/index.html
@@ -1339,6 +1339,12 @@
                 progress: 60, // Percentage
                 images: ["images/uavwip.png", "images/uav.png"] // Example with 2 images
             },
+            {
+                name: "Bench Vise (CAD & FEM)",
+                description: "After 3 years of modeling experience with CATIA, this upcoming project aims to master the SolidWorks environment through the complete design of a mechanical assembly. I intend to integrate Ansys (new experience) for Finite Element Analysis (FEA) to establish a comprehensive validation workflow and demonstrate compatibility between these industry-standard tools.",
+                progress: 1, // Percentage
+                images: ["images/bv.png"] // Example with 2 images
+            },
         
         ];
         // Data structure for Projects UPLOAD
@@ -1776,6 +1782,7 @@
     </script>
 </body>
 </html>
+
 
 
 
