--- a/index.html
+++ b/index.html
@@ -1138,6 +1138,7 @@
             }
         }
     </style>
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
     <!-- Progress Bar -->
@@ -1943,6 +1944,7 @@
     </script>
 </body>
 </html>
+
 
 
 
