--- a/index.html
+++ b/index.html
@@ -1466,10 +1466,10 @@
                 pdf: "projets/doss_mark.pdf", // Placeholder PDF
                 skills: ["Leadership", "Project Management", "Budgeting", "Event Organization", "Teamwork", "Communication"],
                 details: [
-                    { label: "Cash Prize Won", value: "1500€" },
+                    { label: "Cash Prize Won", value: "10k/20k$" },
                     { label: "Events Organized", value: "10+" },
-                    { label: "Community Size", value: "500+ students" },
-                    { label: "Sponsors Managed", value: "3" }
+                    { label: "Community Size", value: "4000+" },
+                    { label: "Views/Impressions", value: "~15'000'000" }
                 ]
             },
             {
@@ -1478,9 +1478,8 @@
                 images: ["images/app2.png", "images/app.png"], // Example with 2 images // Placeholder PDF
                 skills: ["UX/UI design", "Teamwork","Communication",  "Feedback collection & analysis", "Translate needs into concrete features"],
                 details: [
-                    { label: "Beta Testers", value: "50+" },
-                    { label: "User Retention", value: "40% (1 month)" },
-                    { label: "Tech Stack", value: "Flutter, Firebase" },
+                    { label: "Beta Testers", value: "20+" },
+                    { label: "Tech Stack", value: "Swift, Brevo, Firebase" },
                     { label: "Status", value: "In Development" }
                 ]
             },
@@ -1944,6 +1943,7 @@
     </script>
 </body>
 </html>
+
 
 
 
